@@ -20,10 +20,14 @@ allprojects {
     compileJava.options.encoding = "UTF-8"
     compileTestJava.options.encoding = "UTF-8"
 
-    test {
-        useJUnitPlatform()
+    compileJava {
+        options.compilerArgs += ['--enable-preview']
     }
+
+    tasks.withType(JavaExec) { jvmArgs += '--enable-preview' }
 }
+
+tasks.withType(JavaExec) { jvmArgs += '--enable-preview' }
 
 dependencies {
     implementation project(':core')
